k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkedin-spider
  labels:
    name: linkedin-spider
    app: linkedin-spider
